[package]
name = "irodori-extension-delta-lake"
version = "0.1.4"
publish = false
edition = "2021"
license = "0BSD"
description = "Native Irodori Table connector extension for Delta Lake."
repository = "https://github.com/hjosugi/irodori-extension-delta-lake"
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE-*",
  "connector.config.json",
  "connector.source.json",
  "irodori.extension.json",
  "src/**",
  "native/source/**",
]

[lib]
name = "irodori_extension_delta_lake"
crate-type = ["cdylib", "rlib"]

[dependencies]
irodori-connector-abi = { git = "https://github.com/hjosugi/irodori-kit", tag = "v0.7.2" }
duckdb = { version = "1", default-features = false }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
